# bad_library

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
book/: admin.py  models.py  urls.py  views.py
book/migrations/: 0001_initial.py  0002_initial.py  0003_book_publication_date.py  0004_alter_book_publication_date.py  0005_book_slug.py  0006_author_slug_genre_slug.py  0007_author_birthday.py  0008_remove_author_slug_remove_book_slug_and_more.py  0009_author_price.py  0010_remove_author_price_book_price.py  0011_book_quantity.py  0012_alter_book_quantity.py  0013_remove_book_quantity.py
book/templates/: author_detail.html  author_list.html  book_detail.html  book_list.html  book_search_result.html  genre_detail.html  genre_list.html
cart/: models.py  tests.py  urls.py  views.py
cart/templates/: cart_detail.html
home/: views.py
home/static/: styles.css
home/templates/: home.html
orders/: admin.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_real_name.py  0003_alter_order_table.py  0004_remove_order_products_ordersbooks.py  0005_alter_ordersbooks_table.py
orders/templates/: order_detail.html  order_success.html
user/: models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_remove_user_email.py
user/templates/registration/: logged_out.html  login.html  registration.html
